<resources>
    <string name="app_name">SelfTriageFront</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textOne">Welcome Back,</string>
    <string name="textTwo">Sign in to continue</string>
    <string name="textFive">Forget Password</string>
    <string name="btnText">Login</string>
    <string name="textSix">New user?</string>
    <string name="textSevem">Signup</string>
    <string name="fullName">Full Name</string>
    <string name="btnRegister">SignUp</string>
</resources>
